@@ -22,6 +22,7 @@ import org.testng.annotations.Test;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.ThreadLocalRandom;
 import java.util.logging.Handler;
 import java.util.logging.Level;
 import java.util.logging.LogRecord;
@@ -75,6 +76,23 @@ public class TestLogger
     }
 
     @Test
+    public void testDebugSupplier()
+    {
+        inner.setLevel(Level.FINE);
+
+        // message-only version
+        int token = ThreadLocalRandom.current().nextInt();
+        logger.debug(() -> "hello, " + token);
+        assertLog(Level.FINE, "hello, " + token);
+
+        // throwable with message
+        @SuppressWarnings("ThrowableInstanceNeverThrown")
+        Throwable exception = new Throwable("foo");
+        logger.debug(exception, () -> "got exception: " + exception.getMessage());
+        assertLog(Level.FINE, "got exception: foo", exception);
+    }
+
+    @Test
     public void testDebugFormat()
     {
         inner.setLevel(Level.FINE);
@@ -107,6 +125,17 @@ public class TestLogger
     }
 
     @Test
+    public void testInfoSupplier()
+    {
+        inner.setLevel(Level.INFO);
+
+        int token = ThreadLocalRandom.current().nextInt();
+        logger.info(() -> "hello, " + token);
+
+        assertLog(Level.INFO, "hello, " + token);
+    }
+
+    @Test
     public void testInfoFormat()
     {
         inner.setLevel(Level.INFO);
@@ -122,6 +151,23 @@ public class TestLogger
         logger.info("hello, %%");
 
         assertLog(Level.INFO, "hello, %%");
+    }
+
+    @Test
+    public void testWarnSupplier()
+    {
+        inner.setLevel(Level.WARNING);
+
+        // message-only version
+        int token = ThreadLocalRandom.current().nextInt();
+        logger.warn(() -> "hello, " + token);
+        assertLog(Level.WARNING, "hello, " + token);
+
+        // throwable with message
+        @SuppressWarnings("ThrowableInstanceNeverThrown")
+        Throwable exception = new Throwable("foo");
+        logger.warn(exception, () -> "got exception: " + exception.getMessage());
+        assertLog(Level.WARNING, "got exception: foo", exception);
     }
 
     @Test
@@ -154,6 +200,22 @@ public class TestLogger
         Throwable exception = new Throwable();
         logger.warn(exception, "got exception: %%");
         assertLog(Level.WARNING, "got exception: %%", exception);
+    }
+
+    @Test
+    public void testErrorSupplier()
+    {
+        // message-only version
+        int token = ThreadLocalRandom.current().nextInt();
+        logger.error(() -> "hello, " + token);
+        assertLog(Level.SEVERE, "hello, " + token);
+
+        // throwable with message
+        @SuppressWarnings("ThrowableInstanceNeverThrown")
+        Throwable exception = new Throwable("foo");
+
+        logger.error(exception, () -> "got exception: " + exception.getMessage());
+        assertLog(Level.SEVERE, "got exception: foo", exception);
     }
 
     @Test
